// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDialog.js should render a disabled component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="max-width: 290px; display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`VDialog.js should render a fullscreen component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       style="z-index: 0;"
  >
    <div class="dialog dialog--fullscreen"
         style="display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`VDialog.js should render a lazy component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="max-width: 290px; display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`VDialog.js should render a persistent component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       style="z-index: 0;"
  >
    <div class="dialog dialog--persistent"
         style="max-width: 290px; display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`VDialog.js should render a scrollable component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       style="z-index: 0;"
  >
    <div class="dialog dialog--scrollable"
         style="max-width: 290px; display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`VDialog.js should render component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="max-width: 290px; display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`VDialog.js should render component with custom origin and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="max-width: 290px; display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`VDialog.js should render component with custom transition and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="max-width: 290px; display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`VDialog.js should render component with custom width (max-width) and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="max-width: 100px; display: none;"
    >
    </div>
  </div>
</div>

`;
